--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
+    "sharp": "^0.33.1",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
