--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /build
 /.pnp
 .pnp.js
+.yarn
 
 # testing
 /coverage
@@ -23,3 +24,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.yarnrc.yml
