--- a/package.json
+++ b/package.json
@@ -21,19 +21,17 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "@mui/styles": "^5.14.16",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-router-dom": "^6.18.0",
+    "react-hook-form": "^7.49.3",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
-    "sharp": "^0.33.1",
-    "styled-components": "^6.1.0",
+    "sharp": "^0.33.2",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -66,8 +64,8 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "electron": "^15.1.1",
-    "electron-builder": "^24.6.4",
+    "electron": "^28.1.4",
+    "electron-builder": "24.9.1",
     "wait-on": "^7.0.1"
   },
   "packageManager": "yarn@4.0.0"
