--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.14.16",
     "@testing-library/jest-dom": "^5.17.0",
     "cross-env": "^7.0.3",
+    "diff": "^5.2.0",
     "electron-is-dev": "^2.0.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
